# telegram-mcp

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  Taskfile.yml  pyproject.toml
src/telegram_mcp/: auth.py  cli.py  config.py  formatters.py  operations.py  server.py  session.py  string_session.py  telethon_session.py  tools.py  types.py  wire.py
