[project]
name = "telegram-mcp"
version = "0.2.0"
description = "Telegram MCP server — expose Telegram operations to AI agents"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Ivan Zakutnii" }]
keywords = ["mcp", "telegram", "telethon", "claude", "ai-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
]
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "telethon>=1.43.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "returns>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/m0n0x41d/telegram-mcp"
Repository = "https://github.com/m0n0x41d/telegram-mcp"
Issues = "https://github.com/m0n0x41d/telegram-mcp/issues"

[project.scripts]
telegram-mcp = "telegram_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/telegram_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/pyproject.toml",
]
